--- a/action.yml
+++ b/action.yml
@@ -49,11 +49,11 @@ runs:
       shell: bash
       run: |
         echo "::debug::Downloading Hadolint ${{ inputs.version }}"
-        mkdir -p ${{ github.action_path }}/bin
-        curl -L -s -o ${{ github.action_path }}/bin/hadolint \
+        mkdir ${GITHUB_ACTION_PATH}/bin
+        curl -L -s -o ${GITHUB_ACTION_PATH}/bin/hadolint \
           "https://github.com/hadolint/hadolint/releases/download/v${{ inputs.version }}/hadolint-Linux-x86_64"
-        chmod +x ${{ github.action_path }}/bin/hadolint
-        echo "${{ github.action_path }}/bin" >> "${GITHUB_PATH}"
+        chmod +x ${GITHUB_ACTION_PATH}/bin/hadolint
+        echo "${GITHUB_ACTION_PATH}/bin" >> "${GITHUB_PATH}"
     - name: Invoke hadolint.sh
       id: run
       shell: bash
